# Fullstack-Robotics-Bootcamp

./: .gitignore  .gitmodules  README.md
dummy/bullet/script/: twin.py
dummy/bullet/urdf/: dummy.urdf
dummy/gazebo/: CMakeLists.txt  package.xml
dummy/gazebo/config/: controller.yaml
dummy/gazebo/launch/: dummy.launch  dummy_ctrl.launch  dummy_gazebo.launch
dummy/gazebo/urdf/: army.xacro  dummy.xacro
dummy/mujoco/: dummy.xml
dummy/mujoco/script/: twin.py
fredo1/bullet/script/: twin.py
fredo1/bullet/urdf/: fredo1.urdf  plane.urdf
fredo1/cad/: README.md
fredo1/cad/all_files/: c_servo_3.STL  c_servo_4.STL
fredo1/firmware/misc/: run_ardu_ros.sh
fredo1/gazebo/: CMakeLists.txt  package.xml
fredo1/gazebo/config/: controller.yaml  fredo1.rviz  test.sh
fredo1/gazebo/launch/: dummy.launch  dummy_ctrl.launch  dummy_gazebo.launch  fredo1.launch  fredo1_ctrl.launch  fredo1_gazebo.launch  fredo1_rviz.launch
fredo1/inverse_kinematics/: CMakeLists.txt
fredo1/kinematics/: CMakeLists.txt
fredo1/kinematics/include/: com_util.h
fredo1/kinematics/script/: ctrl_point.py  derive.py  forward_kinematics.py  kinematics.py
fredo1/kinematics/src/: ctrl_point.cpp  forward_kinematics.cpp
fredo1/mujoco/: fredo1.xml
fredo1/script/: fredo1_twin_mujoco.py
fredo2/cad/: ControlBox_Base_V2.STL
gazebo/: package.xml
gazebo/launch/: gazebo.launch
gazebo/urdf/: army.xacro
model/fredo1/: fredo1.xml  lala.STL  lala.xml
print3D/army_stl/: tip_point.STL
test_script/ros_ardu_test/: ros_ardu_test.ino
test_script/servo_angle_test/: servo_angle_test.ino
(+111 files in other folders)
